janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__a_declaration_file_is_not_a_module.snap
---
source: src/analysis/workspace/tests.rs
expression: show_graph(&workspace)
---
----- SOURCE CODE
-- /ws/a.janet
(import ./host.d)
(db/pull [] 1)
-- /ws/host.d.janet
(defn spork/json/encode {:params [:any] :ret :string} "To JSON." [x])
(defn db/pull {:params [[:keyword] :number] :ret :any} [pattern eid])

----- MODULE GRAPH
