janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__a_dependency_is_inferred_once_a_session.snap
---
source: janet-check/src/analysis/workspace/tests.rs
assertion_line: 473
expression: shown
---
```janet
(encode x) -> :string
```
defn in `json.janet`, type inferred
