janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__a_type_travels_three_files_and_no_further.snap
---
source: src/analysis/workspace/tests.rs
expression: "format!(\"----- a.janet\\n{}\\n\\n----- b.janet\\n{}\\n\\n----- c.janet\\n{}\\n\",\ninferred(&workspace, \"/ws/a.janet\"), inferred(&workspace, \"/ws/b.janet\"),\ninferred(&workspace, \"/ws/c.janet\"),)"
---
----- a.janet
far: (fn [] :any)
own: (fn [] :string)

----- b.janet
far: (fn [] :number)
own: (fn [] :string)

----- c.janet
far: (fn [] :number)
own: (fn [] :string)
