janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__an_unannotated_definition_is_typed_where_it_is_imported.snap
---
source: janet-check/src/analysis/workspace/tests.rs
assertion_line: 274
expression: "format!(\"----- SOURCE CODE\\n{BARE_SHAPES}\\n{REPORT}\\n----- HOVER\\n{}\\n\",\nhover(&workspace, \"/ws/report.janet\", \"shapes/area\"))"
---
----- SOURCE CODE
(def pi-ish 3.14159)

(defn circle [r]
  {:kind :circle :r r})

(defn area [shape]
  (case (shape :kind)
    :circle (* pi-ish (shape :r) (shape :r))
    :rect (* (shape :w) (shape :h))
    (errorf "unknown shape: %q" shape)))

(import ./shapes)

(defn total-area [items]
  (->> items
       (map shapes/area)
       (reduce + 0)))

----- HOVER
```janet
(area shape: {:kind :any :r :number :w :number :h :number & r}) -> :number
throws :string
```
defn in `shapes.janet`, type inferred
