janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__changed_imports_move_the_edges.snap
---
source: src/analysis/workspace/tests.rs
expression: show_graph(&workspace)
---
----- SOURCE CODE
-- /ws/a.janet
(import ./b)
-- /ws/b.janet
(defn f [] 1)

----- MODULE GRAPH
/ws/a.janet imports /ws/b.janet (./b as "b/")
/ws/b.janet is imported by /ws/a.janet as "b/"
