janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__import_once_the_file_appears.snap
---
source: src/analysis/workspace/tests.rs
expression: show_graph(&workspace)
---
----- SOURCE CODE
-- /ws/a.janet
(import ./b :as bee)
(bee/f)
-- /ws/b.janet
(defn f [] 1)

----- MODULE GRAPH
/ws/a.janet imports /ws/b.janet (./b as "bee/")
/ws/b.janet is imported by /ws/a.janet as "bee/"
