janet-check/src/analysis/workspace/snapshots/janet_check__analysis__workspace__tests__imports_that_point_at_each_other_still_settle.snap
---
source: src/analysis/workspace/tests.rs
expression: "format!(\"----- x.janet\\n{}\\n\\n----- y.janet\\n{}\\n\",\ninferred(&workspace, \"/ws/x.janet\"), inferred(&workspace, \"/ws/y.janet\"),)"
---
----- x.janet
f: (fn [] :number)
plain: (fn [] :number)

----- y.janet
g: (fn [] :number)
